<resources>
    <string name="app_name">Happy Places</string>
    <string name="addHappyPlaceToolbarTitle">Add Your Happy Place</string>
    <string name="happyPlaceMapToolbarTitle">Find Your Happy Place</string>
    <string name="happyPlaceDetailToolbarTitle">Happy Place Details</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="date_hint">Date</string>
    <string name="location_hint">Loaction</string>
    <string name="save">Save</string>
    <string name="text_add_image">Tap to add image</string>
    <string name="selectAction">Select Action</string>
    <string name="selectFromGallery">Select photo from gallery</string>
    <string name="CaptureFromCamera">Capture photo from camera</string>
    <string name="permissionAlertMessage">It looks like you have turned of permissions required for this feature. It can be enabled in application settings</string>
    <string name="goToSettings">GO TO SETTINGS</string>
    <string name="Cancel">Cancel</string>
    <string name="NoHappyPlacesFound">No happy places found yet</string>
    <string name="image_content_description">Image</string>
    <string name="google_maps_api_key">KEY</string>
    <string name="btn_text_view_on_map">VIEW ON MAP</string>
</resources>