<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".AddHappyPlaceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_place"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/CustomToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/svAddHappyPlace"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_add_place">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/defaultMargin">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_hint"
                    android:inputType="text"
                    android:textSize="@dimen/defaultTextSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/defaultMargin">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_hint"
                    android:inputType="text"
                    android:textSize="@dimen/defaultTextSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/defaultMargin">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/date_hint"
                    android:inputType="text"
                    android:textSize="@dimen/defaultTextSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLocation"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/defaultMargin">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location_hint"
                    android:inputType="text"
                    android:textSize="@dimen/defaultTextSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_place_image"
                    android:layout_width="@dimen/add_screen_place_image_size"
                    android:layout_height="@dimen/add_screen_place_image_size"
                    android:layout_marginTop="@dimen/defaultMargin"
                    android:background="@drawable/shape_image_view_border"
                    android:padding="@dimen/add_screen_place_image_padding"
                    android:scaleType="centerCrop"
                    android:src="@drawable/add_screen_image_placeholder"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_location" />

                <TextView
                    android:id="@+id/tv_add_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/add_screen_text_add_image_marginTop"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/add_screen_text_add_image_padding"
                    android:text="@string/text_add_image"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/add_screen_text_add_image_textSize"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/btn_save"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.45"
                    app:layout_constraintStart_toEndOf="@+id/iv_place_image"
                    app:layout_constraintTop_toBottomOf="@+id/til_location"
                    app:layout_constraintVertical_bias="0.019" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/defaultMargin"
                android:text="@string/save"
                android:textSize="@dimen/defaultTextSize" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>